[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie"], default-features = false }
dotenvy = "0.15.7"
regex = { version = "1.12.2", default-features = false, features = ["perf", "std"] }
reqwest = { version = "0.13.1", features = ["rustls", "stream"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.8", features = ["fs", "timeout"], default-features = false }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.8.1" }
tracing-test = "0.2.5"
reqwest = { version = "0.13.1", features = ["blocking"] }

[[bench]]
name = "rewrite_urls"
harness = false